--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "smartive AG",
-            "email": "hello@smartive.ch"
+            "homepage": "https://smartive.ch"
         }
     ],
     "support": {
