--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": ">=5.6.0",
         "symfony/framework-bundle": "^2.5|^3.0",
+        "symfony/console": "^2.5|^3.0",
         "hellogerard/jobby": "^3.0"
     },
     "prefer-stable": true
