--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "psr-4": { "Smartive\\CronCommandBundle\\": "" }
     },
     "require": {
-        "php": ">=5.6.0",
-        "symfony/framework-bundle": "^2.5|^3.0",
-        "symfony/console": "^2.5|^3.0",
-        "hellogerard/jobby": "^3.0"
+        "php": ">=7.1",
+        "symfony/framework-bundle": "^2.5|^3.0|^4.0|^5.0",
+        "symfony/console": "^2.5|^3.0|^4.0|^5.0",
+        "hellogerard/jobby": "^3.4.7"
     },
     "prefer-stable": true
 }
